--- a/Numerico2015-I.ipynb
+++ b/Numerico2015-I.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:d7f3b851fc0d779665ef226175c48485a97c087584278d120124d9ccc44aeef2"
+  "signature": "sha256:9f6ea126f26fee30b6c14bfc2e27d7d349fb2e954b4850a927a00d115304a012"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -631,7 +631,14 @@
       "### Interpolaci\u00f3n y aproximaci\u00f3n de funciones (Ajuste de curvas)\n",
       "Hay dos tipos de problemas que ha menudo de confunden, el primero es encontrar a partir de un n\u00famero de puntos o datos, un polinomio que pase por los puntos, esto es $P(x_{i}) = f(x_{i})$ llamado **polinomio interpolante** que se puede usar para aproximar una funci\u00f3n donde s\u00f3lo se conoce estos puntos; el segundo es buscar un polinomio tal que la suma de los cuadrados de sus distancias sea m\u00ednima. El criterio es conocido como **m\u00ednimos cuadrados** y en general se conoce como *ajuste polinomial*. Tambi\u00e9n se puede usar otro tipo de ajuste como el exponencial, logar\u00edtmico y potencial.\n",
       "\n",
-      "Este tema es importante ya que en muchos experimentos lo que se tienen son tablas de datos y se quiere encontrar una expresi\u00f3n matem\u00e1tica que muestre el comportamiento de los datos. As\u00ed por ejemplo se puede tener en registros historicos el censo de una poblaci\u00f3n entre los a\u00f1os 1940 a 1990, pero podr\u00edamos preguntarnos si es posible utilizarlos para obtener una estimaci\u00f3n razonable de la poblaci\u00f3n en el a\u00f1o 2050. Este tipo de predicciones puede obtenerse por medio de una funci\u00f3n que corresponda a los datos disponibles. Este proceso recibe el nombre de **interpolaci\u00f3n**.\n",
+      "Este tema es importante ya que en muchos experimentos lo que se tienen son tablas de datos y se quiere encontrar una expresi\u00f3n matem\u00e1tica que muestre el comportamiento de los datos. As\u00ed por ejemplo se puede tener en registros historicos el censo de una poblaci\u00f3n entre los a\u00f1os 1940 a 1990, pero podr\u00edamos preguntarnos si es posible utilizarlos para obtener una estimaci\u00f3n razonable de la poblaci\u00f3n en el a\u00f1o 2050. Este tipo de predicciones puede obtenerse por medio de una funci\u00f3n que corresponda a los datos disponibles. Este proceso recibe el nombre de **interpolaci\u00f3n**."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "----\n",
       "\n",
       "#### 1. Interpolaci\u00f3n Polinomial de Newton (p. 503 de [1])\n",
       "\n",
@@ -698,7 +705,14 @@
       "* 18.1 de [1]\n",
       "* 18.2 de [1]\n",
       "* 18.3 de [1]\n",
-      "* 18.4 de [1]\n",
+      "* 18.4 de [1]\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "---\n",
       "\n",
       "#### 2. Interpolaci\u00f3n de Lagrange (p. 516 de [1] {540 del pdf}\n",
       "\n",
@@ -716,16 +730,14 @@
       "\n",
       "##### Ejercicios (537 de [1] {561 del pdf})\n",
       "\n",
-      "Muestrar los **coeficientes del polinomio** obtenido y una tabla con los siguientes datos:\n",
+      "Mostrar los **coeficientes del polinomio** obtenido y una tabla con los siguientes datos:\n",
       "<table>\n",
       "    <tr>\n",
       "        <th>Iteraci\u00f3n (n)</th>\n",
       "        <th>$x_{i}$</th>\n",
       "        <th>f($x_{i}$)</th>\n",
-      "        <th>error apr\u00f3ximado (ea)</th>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "        <td></td>\n",
       "        <td></td>\n",
       "        <td></td>\n",
       "    </tr>\n",
@@ -754,8 +766,14 @@
       "</table>\n",
       "\n",
       "Calcular $f(3.5)$\n",
-      "* Use los polinomios interpolantes de Lagrange apropiados de grados uno, dos y tres para aproximar $f(8.4)$ si $f(8.1) = 16.94410$, $f(8.3)=17.56492$, $f(8.6)=18.50515$, $f(8.7)=18.82091$.\n",
-      "\n",
+      "* Use los polinomios interpolantes de Lagrange apropiados de grados uno, dos y tres para aproximar $f(8.4)$ si $f(8.1) = 16.94410$, $f(8.3)=17.56492$, $f(8.6)=18.50515$, $f(8.7)=18.82091$.\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "----\n",
       "\n",
       "#### 3. Interpolaci\u00f3n polinomial por pedazos \n",
       "\n",
@@ -769,19 +787,34 @@
       "\n",
       "**Seuc\u00f3digo** (139 de [3])\n",
       "\n",
-      "ENTRADA\n",
+      "ENTRADA los n\u00fameros $x_{0},x_{1}, ...,x_{n}$; valores $f(x_{0}), ..., f(x_{n})$ y $f'(x_{0}), ..., f'(x_{0})$.\n",
       "\n",
-      "SALIDA\n",
+      "SALIDA los n\u00fameros $Q_{0,0}, Q_{1,1}, ..., Q_{2n+1,2n+1}$ donde\n",
+      "$H(x) = Q_{0,0} + Q_{1,1}(x - x_{0}) + Q_{2,2}(x - x_{0})^2 + Q_{3,3}(x - x_{0})^2(x - x_{1}) + Q_{4,4}(x - x_{0})^2(x - x_{1})^2  + ... + Q_{2n+1,2n+1}(x - x_{0})^2(x - x_{1})^2...(x - x_{n-1})^2(x - x_{n})$\n",
       "\n",
-      "PASO 1\n",
+      "PASO 1 Para i = 0,1,...,n haga pasos 2 y 3\n",
       "\n",
-      "PASO 2\n",
+      "PASO 2 Sea $z_{2i} = x_{i}$ ;\n",
       "\n",
-      "PASO 3\n",
+      "  $z_{2i+1} = x_{i}$;\n",
+      "    \n",
+      "  $Q_{2i,0} = f(x_{i})$;\n",
+      "    \n",
+      "  $Q_{2i+1,0} = f(x_{i})$;\n",
+      "    \n",
+      "  $Q_{2i+1,1} = f'(x_{i})$.\n",
       "\n",
-      "PASO 4\n",
+      "PASO 3 si $i!=0$ entonces tome\n",
       "\n",
-      "PASO 5\n",
+      "   $$Q_{2i,1} = \\frac{Q_{2i,0} - Q_{2i-1,0}}{z_{2i} - z_{2i-1}}$$\n",
+      "\n",
+      "PASO 4 Para $i = 2,3,...,2n+1$\n",
+      "\n",
+      "   para $j = 2,3,...i$ tomar \n",
+      "   \n",
+      "   $$Q_{i,j} = \\frac{Q_{i, j-1} - Q_{i-1,j-1}}{z_{i} - z_{i-j}}$$\n",
+      "\n",
+      "PASO 5 SALIDA $(Q_{0,0}, Q_{1,1},..., Q_{2n+1,2n+1})$; PARAR\n",
       "\n",
       "\n",
       "#### 3.2. Interpolaci\u00f3n mediante trazadores (splines) (p. 525 de [1] {549 del pdf}\n",
@@ -796,6 +829,8 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
+      "----\n",
+      "\n",
       "### Referencias bibliogr\u00e1ficas\n",
       "\n",
       "* [1] M\u00e9todos num\u00e9ricos para ingenieros. Steven Chapra y Raymond Canale, quinta edici\u00f3n, 2007.\n",
