--- a/Numerico2015-I.ipynb
+++ b/Numerico2015-I.ipynb
@@ -1,13 +1,25 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9f6ea126f26fee30b6c14bfc2e27d7d349fb2e954b4850a927a00d115304a012"
+  "signature": "sha256:fa9531a07a187d15f887edf7dd3d7f31ce39e981ef732a35010d32e2caef2894"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
  "worksheets": [
   {
    "cells": [
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from IPython.display import Image\n",
+      "l1i = Image(filename='images/l1.png')"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 8
+    },
     {
      "cell_type": "markdown",
      "metadata": {},
@@ -759,13 +771,42 @@
       "    <tr>\n",
       "        <td>f(x)</td>\n",
       "        <td>4.75</td>\n",
+      "        <td>4</td>\n",
       "        <td>5.25</td>\n",
       "        <td>19.75</td>\n",
       "        <td>36</td>\n",
       "    </tr>\n",
       "</table>\n",
       "\n",
-      "Calcular $f(3.5)$\n",
+      "Calcular $f(3.5)$"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "l1i\n",
+      "#fit {{1,4.75},{2,4},{3,5.25},{5,19.75},{6,36}} en wolframalpha"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "png": "R0lGODlhLAG/APcAAAAAAAAEAAgICBAAAAgMCBAQEBAUEBgYGBgcGCAgICksKTE0MTk8OXsAAEFE\nQUpISkpMSlJQUlpZWlpdWmJhYmJlYmptanNxc3N1c3t5e/YAAP8AAP8EAP8ECP8ICKwwWr1AYr1E\nYtVVat5dc9Vhc0FAnEFEnEpEnEpInGJQnGJVnEpIpEpMpFJMpFJQpFJVpFpVpFpZpFpZrFpdrGJd\nrGJhrGJlrGplrGpprHtppGpptGpttHNttHNxtHN1tHt1tHt5vXt9vYNxrIN9vYOBg4OFg4uJi5SR\nlJSVlJyZnJydnIOBvYOFvaShpKSlpKyurLSytLS2tL26vf+Bg/+Fg/+Ji4uFxYuJxYuNxZSNxZSR\nxZSVxZyVzZyZzZydzaShzaSlzaSl1ayl1ayq1ayu1bSu1bSy1bS21bS23r223r263r2+3sWqzc22\n1cW+3sXCxc3Kzc3OzcXC3tXC1dXS1d7a3t7e3ubO3sXG5s3G5s3K5s3O5tXO5tXS5tXS7tXW7t7W\n7t7a7t7e7u7W5vbe5ubi5ubm5ubi7u7q7u7u7v/m7v/q7v/u7ubi9ubm9u7m9u7q9u7u9vby9vb2\n9vby//b2///6/////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACwAAAAALAG/AAAI/wAvCRxI\nsCCAgggTKlzIsKHDhxAjSpxIsaLFixgzalx4cKPHjyBDihxJsqTJgR1PqlzJsqXLlyNTwpxJs6bN\nmyEB6MTJs6fPnyLVSJQJtKjRo0gFWoIxNKnTp1BnkgHSNKrVq1g3VmoRqGrWr2DDKvTCZKJOomLT\nqnUaiQUks2vjykWqRQtFtHPz6m3JiJGjFZLu7h1M+OQUDx5AfKmIt7DjxxQXedhAWRHjnZAza34o\nmXKHRYw3ix6tkIoHDlUsNibN+rGlFHMSWjCC4YjAAwsWFCG4urXvvWOoIpSU4ZIkAcaJJOz9u/na\nSC0aMYTC4FIhCgYQSOF91rn3uVi2LP+UAsAAHOtNJhlJwPu7+7iCXFBq2IT9wEkymb/f77QHmYV1\nxGFcAZc4IaAhCrTH34JX5TEDQ3VEoAQGTlzyBgQTCogSgxxCNYMeG3XX4YhAkeGDR/qRqGJLlLRw\nCIorxnhTXR+lKOONIQXSwnww4ujjSjqYAZKIPxYZkho25GTkkiBV4sIfSjIpZUZblBXllFhOdMgK\nkYhkY5ZgXtLDGDFhFuaZCK0xgyUxoelmQZW8sAdJX75ZpBdBlFSnnTg24paefLo5pklEBjqlGjWc\ntKehJFLypKKMZokFFhjNVpt1FChBgR0KRsrkHy5UchFxxiEXQRSXSBFBp54aWcMaG1H/d0kBiVyS\nCAHcmdnqjWP0oBF55l0CAJvCsrrrjY+w4IhH9c1a663GHhtjD2BoFOCAl5ya6qobSnsjGolaKyGF\nl9gxgRITcNqttytC11VLhbLLYRBdvLSovKzJIQOx8OI7oqN9wHSvv5tdQanABDO4R6gzxZtwc5XA\ngAdNAz9c2BVWNmyxe3q8ICrFG3vnJIg1VRzyXEwcXLKuJ4uGRwwfl9xyawDjZPLMYi0hns04j+bG\nmjzd3DNW0EEZNMtDD9aDFz4JnTRUY+jwk9NPJxWIsixZmsRtue22btV6VTKDUCvR8YBxuEqiHEJU\ng10UFkvAVMcBmGa3HUoOux0WHh6//2SJBNsVkt560eotFnQBu0ScuvflZ7hcPjDtkiUVBDZJgQcm\n+PXjYYGxA0xK4LZAghdmWDjnV/XhwltHtY06TJK8kEdSeb/u1A/10m57VmJI7ZTru6v0Rwus6x48\nVJS8MPFTwB9PUg92QVW78zx1oQO/v1OPlBwudBlV89pv5KcfV4EfPkZi/1f++T8NkbFV07Pf0hg2\nYP+9/Djx4cIjX5mPP0SQcAHJsuK//zWkEjYgE1gKaMCFDOEKYolfA0PyhR3YDysMnCBB5BAD7xlF\na5jSFOOKpUGVBMIFgkCK2dCWLVSp6nQl3EhfIqE8qMzNWbbC1eZi6JHDeOAD1XrK3/+2MyyB5EeC\nPIxIZzbAAdA4ZXECoVUOYZjEiizRA05ECuUs18JtUbGKFBEBBzyQGqeELjcJMhe6RpjB/6lBBoRg\nxFzaKL89sOBFeUEiGBkiCBbMSS90DF8AyQbIPV4kEjFQ4F4C6bxK1CB3g2Fk8CrBA5VFEmmGZAgQ\n4uYYSdqOCT64YCEzCREt6CBmhfEk57SAA1SmkpQO6YINXJlKTMLyEl6oQWA0o0q3fWEGHsxML6sm\nBhkEU5i3RMgXZFC8zQxzaF0AJmv0WMIt1OCYzkymQLJgAx7lBRFEKAC/ROc1I2rzCqdMJbHUtpxb\nWoIJPKBlHol1Hbt9UYOV8EEoH1P/RPSoxz5GpCb7KKEDJogSkPbDzz0NCAka7Awy/TTQJRC0UPw1\nAgaKdAwilACAJCDCQhjCgIbMCUZAuICQ33mmv+SwguW9R6DOC8Oj+KNSdl2BBs18aQwr0QMfyDOl\nJXzEDLIwopq2SnXq6xBMOUeGFgxQqQZ8Zw2WpSKjBgoSNljCTxdkVTstLAw36qqbvuBUHC01aZHo\ngQ5yuiKxgmlhkDSr9sj6VLke7xE74AFbw3q8NLQgo0U668YoEYQapFBKbi2SHlzAhYP6KLE4qgQW\nXpA4EoFTnAK5jggrerI8vOAK3mwrsbT1wh0mjRJMiMEfw0osKUILb7Y82RpcsAXH/xaVWP10XNUa\n0YMavOtH/XStDkk6tEp0YQWAfexoXcgt4uJMDi9YAjZvtNGOflSN6eKstw7RAxrwIVKCNVQksPDX\nVkH2O5X4wgq2EFpGndc5aHDBEqi6q/f6Zg000IHRpGVf0sihBjZwqbfCmyU8AFjA7OpvZtZQgxrI\n4WEKLkwlyACDHczOYhHeiyTICoT9YthTgLDCCq6Ax5MROEaWUMMNXhCG9oYsw2k5xBZawIMHJw3G\nX6nEGXTggi7Q98Zn0gMTVgAEBD8Nx1DpA3l1QIbpHjm2K9qDFlxQgzDw73VIpklfElIJNwzZBl+Q\nTvCyDBMfUmEggujVCfyzVyx36P+KbGBCC2KABTls9XWMGECHBtEBymxACGb48fH4dRgNNADKoqGE\nHr4ABBe4IAQdIKP8tmCCGeSAA565w50fEwk9iGEJMjCBDrSgBqpuGX+UEEQb+sxEFZgABTPoARO8\nQAY8/KHNJsnzSSChBzJsoQcuQIEOsGCG3xrEKJBN7L1Mo4EyphoPZvDCFX4AgBaUwAU2AMIVaO2G\nPgBgl+1kSGMKfWaF9IYoz/Y1AGpgghbs4Apj0APrzi3uhtCbI/XGt77Nbe9883vf4f63wCeia31D\n4g94KIMXsAAEHQAABSVgwQx2oO0ufMEMANCDHwQBCRfj5YpZPPZAKuGIQOxhDRj/z8ILdCCDEqyA\nBj7AAhgAEIif3nvgAc852/ytc5HjfOcAB/rPqXhzh5zl6EhPutKXzvSmK30AGqCMBgbg9Kpb/epY\nz7rWt871rnv962BHekQCaQlJOKIRgfCDHvCwhjWowQxwH0EHOkACuJtBDW3Xgx76EIhGQGLT2oQL\nUE4d+H4V/jdkPrziF8/4q4DQJ5ayzU/gEICfkNMnkriAppCglhVKYrg4IdVxfiIJjmJ+bT+xwBMu\nMYkRpuWGQJGVT5Bgia7WUzs+QYATDnCAu6lliD8B1nl6EgVO2X5wALUZEiZBhOSHBYpFaVZPDHD0\nQvxEoT0RwOWwL5Ytst4n15IELoGA0lWJUrQnDhBQITQnljOODvzjqpBPLJEEAKyeJ6UTKfgroAQL\nDL/xANhAAQEAOw==\n",
+       "prompt_number": 10,
+       "text": [
+        "<IPython.core.display.Image at 0x7f19fc2ec090>"
+       ]
+      }
+     ],
+     "prompt_number": 10
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "* Use los polinomios interpolantes de Lagrange apropiados de grados uno, dos y tres para aproximar $f(8.4)$ si $f(8.1) = 16.94410$, $f(8.3)=17.56492$, $f(8.6)=18.50515$, $f(8.7)=18.82091$.\n"
      ]
     },
@@ -818,6 +859,38 @@
       "\n",
       "\n",
       "#### 3.2. Interpolaci\u00f3n mediante trazadores (splines) (p. 525 de [1] {549 del pdf}\n",
+      "\n",
+      "El tipo de polinomio por pedazos de Hermite tiene la desventaja de que su segunda derivada no es continua en los puntos de interpolaci\u00f3n. En aplicaciones gr\u00e1ficas, es importante que no hayan discontinuidades en las segundas derivadas de una funci\u00f3n, para que los gr\u00e1ficos con este tipo de funciones luzcan uniformes. Esto motiva el uso de *splines* que son funciones $s(x)$ continuas por pedazos con las siguientes propiedades:\n",
+      "\n",
+      "* $s(x)$ es un polinomio c\u00fabico en $[x_{i}, x_{i+1}]$ para $0<=i<=n-1$\n",
+      "* $s'(x), s''(x)$ existen y son continuas en $[x_{0},x_{n}]$\n",
+      "* $s(x)$ interpola a la funci\u00f3n f en los datos, esto es $s(x_{i})=f(x_{i})$\n",
+      "* $s(x)$ es continua en $[x_{0},x_{n}]$\n",
+      "* Tanto la funci\u00f3n como la primera y segunda derivada de s en un nodo para $s_{i}(x)$ y $s_{i+1}(x)$ son iguales.\n",
+      "\n",
+      "\n",
+      "**Seuc\u00f3digo en la p\u00e1gina 536 de [1] (560 del pdf)**\n",
+      "\n",
+      "\n",
+      "##### Ejercicios (537 de [1] {561 del pdf})\n",
+      "\n",
+      "Mostrar los **coeficientes del polinomio** obtenido y una tabla con los siguientes datos:\n",
+      "<table>\n",
+      "    <tr>\n",
+      "        <th>Iteraci\u00f3n (n)</th>\n",
+      "        <th>$x_{i}$</th>\n",
+      "        <th>f($x_{i}$)</th>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "        <td></td>\n",
+      "        <td></td>\n",
+      "    </tr>\n",
+      "</table>\n",
+      "\n",
+      "* 18.10\n",
+      "* 18.11 (parte a)\n",
+      "\n",
+      "**Nota:** usar paquetes matem\u00e1ticos para solucionar los ejercicios de *splines* (570 de [1] {594 del pdf})\n",
       "\n",
       "\n",
       "**Nota**: conceptos b\u00e1sico de matrices y sus operaciones, p\u00e1gina 236 de [1] (260 del pdf)\n",
