--- a/Numerico2015-I.ipynb
+++ b/Numerico2015-I.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fa9531a07a187d15f887edf7dd3d7f31ce39e981ef732a35010d32e2caef2894"
+  "signature": "sha256:897e5239799285fdd91c9097783e24e82d78aaf6055b76dbf66ede50c29caa95"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -871,6 +871,48 @@
       "\n",
       "**Seuc\u00f3digo en la p\u00e1gina 536 de [1] (560 del pdf)**\n",
       "\n",
+      "**Seuc\u00f3digo TRAZADOR C\u00daBICO NATURAL en la p\u00e1gina 148 de [3]:**\n",
+      "\n",
+      "ENTRADA $n$;$x_{0}, x_{1}, ..., x_{n}$; $a_{0} = f(x_{0}), a_{1} = f(x_{1}), ..., a_{n} = f(x_{n})$.\n",
+      "\n",
+      "SALIDA $a_{j}, b_{j}, c_{j}, d_{j}$ para $j = 0,1,...,n-1$.\n",
+      "\n",
+      "(nota: $S(x) = S_{j}(x) = a_{j} + b_{j}(x - x_{j}) + c_{j}(x - x_{j})^2 + d_{j}(x - x_{j})^3$ para $x_{j}<=x<=x_{j+1}$)\n",
+      "\n",
+      "**Paso 1** Para $i = 0, 1, ..., n-1$ tome $h_{i} = x_{i+1} - x_{i}$\n",
+      "\n",
+      "**Paso 2** Para $i = 0, 1, ..., n-1$ tome $$\\alpha_{i} = \\frac{3}{h_{i}}(a_{i+1} - a_{i}) - \\frac{3}{h_{i-1}}(a_{i} - a_{i-1})$$\n",
+      "\n",
+      "**Paso 3** Tome $l_{0} = 1$; (Los paso 3,4,5 y parte del paso 6 resuelven un sistema lineal tridiagonal utilizando el m\u00e9todo de factorizaci\u00f3n de Crout)\n",
+      "\n",
+      "   - $u_{0} = 0$\n",
+      "\n",
+      "   - $z_{0} = 0$\n",
+      "\n",
+      "**Paso 4** Para $i = 1, 2, ..., n-1$\n",
+      "\n",
+      "   - tome $l_{i} = 2(x_{i+1} - x_{i-1}) - h_{i-1}u_{i-1}$\n",
+      "   \n",
+      "       -  $u_{i} = h_{i} / l_{i}$\n",
+      "   \n",
+      "       - $z_{i} = (\\alpha_{i} - h_{i-1}z_{i-1})/ l_{i}$\n",
+      "\n",
+      "**Paso 5** Tome $l_{n} = 1$\n",
+      "\n",
+      "   - $z_{n} = 0$\n",
+      "\n",
+      "   - $c_{n} = 0$\n",
+      "\n",
+      "**Paso 6** Para $j =  n -1, n-2, ..., 0$\n",
+      "\n",
+      "   - tome $c_{j} = z_{j} - u _{j}c_{j+1}$\n",
+      "   \n",
+      "       - $b_{j} = (a_{j+1} - a_{j}) / h_{j} - h_{j}(c_{j+1} + 2c_{j}) / 3$\n",
+      "   \n",
+      "       - $d_{j} = (c_{j+1} - c_{j}) / (3h_{j})$\n",
+      "   \n",
+      "**Paso 7** SALIDA ($a_{j}, b_{j}, c_{j}, d_{j}$ para $j = 0,1,...,n-1$); PARAR\n",
+      "\n",
       "\n",
       "##### Ejercicios (537 de [1] {561 del pdf})\n",
       "\n",
@@ -896,6 +938,39 @@
       "**Nota**: conceptos b\u00e1sico de matrices y sus operaciones, p\u00e1gina 236 de [1] (260 del pdf)\n",
       "\n",
       "**Nota**: conceptos b\u00e1sicos de estad\u00edstica, p\u00e1gina 453 de [1] (477 del pdf)\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "----\n",
+      "\n",
+      "#### 4. Interpolaci\u00f3n de Fourier (p. 539 de [1] {563 del pdf})\n",
+      "\n",
+      "Las interpolaciones hastal el momento se han destacado por usar los polinomios est\u00e1ndar, es decir, las combinaciones lineales de los monomios $1, x, x^2 ,..., x^m$ . Ahora veremos otra clase de funciones que son trascendentales en la ingenier\u00eda. \u00c9stas son las funciones trigonom\u00e9tricas $1, cosx, cos2x, ..., cosnx, senx, sen2x,..., sennx$\n",
+      "\n",
+      "Los ingenieros a menudo tratan con sistemas que oscilan o vibran. Como es de esperarse, las funciones trigonom\u00e9tricas juegan un papel importante en el modelado de tales problemas. La *aproximaci\u00f3n de Fourier* representa un esquema sistem\u00e1tico para utilizar series trigonom\u00e9tricas con este prop\u00f3sito.\n",
+      "\n",
+      "**Seudoc\u00f3digo en la p\u00e1gina 557 de [1]** {581 del pdf}\n",
+      "\n",
+      "##### Ejercicios (575 de [1] {599 del pdf})\n",
+      "\n",
+      "Mostrar gr\u00e1fica una tabla con los siguientes datos:\n",
+      "<table>\n",
+      "    <tr>\n",
+      "        <th>Iteraci\u00f3n (n)</th>\n",
+      "        <th>$x_{i}$</th>\n",
+      "        <th>f($x_{i}$)</th>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "        <td></td>\n",
+      "        <td></td>\n",
+      "    </tr>\n",
+      "</table>\n",
+      "\n",
+      "* 19.10\n",
+      "* 19.11\n"
      ]
     },
     {
