Adicionado casos de estudio Interpolación

--- a/Numerico2015-I.ipynb
+++ b/Numerico2015-I.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:897e5239799285fdd91c9097783e24e82d78aaf6055b76dbf66ede50c29caa95"
+  "signature": "sha256:9264813478e94f7488b0932bc50200bd1200c0435f4d54ccf9f1e6e2e26f6011"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -956,7 +956,7 @@
       "\n",
       "##### Ejercicios (575 de [1] {599 del pdf})\n",
       "\n",
-      "Mostrar gr\u00e1fica una tabla con los siguientes datos:\n",
+      "Mostrar gr\u00e1fica y una tabla con los siguientes datos:\n",
       "<table>\n",
       "    <tr>\n",
       "        <th>Iteraci\u00f3n (n)</th>\n",
@@ -971,6 +971,19 @@
       "\n",
       "* 19.10\n",
       "* 19.11\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "----\n",
+      "\n",
+      "#### 5. Estudio de casos: ajuste de curvas (p\u00e1gina 578 de [1] (602 del pdf))\n",
+      "\n",
+      "* Seleccionar **dos problemas** del cap\u00edtulo 20 (p\u00e1gina 587(611) de [1]) que m\u00e1s le llame la atenci\u00f3n, an\u00e1lizarlos y tratar de resolverlos. Nos interesa el proceso que se lleva a cabo para hallar una polinomio o funci\u00f3n trigonm\u00e9trica que me represente la generalidad de los datos.\n",
+      "* Se recomienda la revisi\u00f3n de la secci\u00f3n **Ep\u00edlogo: parte cinco** (p\u00e1gina 597 (621) de [1]) donde se presenta un resumen y comparaci\u00f3n de los diferentes m\u00e9todos para hallar una curva que mejor se ajuste a la tendencia lineal de los datos.\n",
+      "* "
      ]
     },
     {
