--- a/EstructuraLenguajes2015-I.ipynb
+++ b/EstructuraLenguajes2015-I.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": "EstructuraLenguajes2015-I"
+  "name": "",
+  "signature": "sha256:e59951427a560b47a2b75212e6b24a33528465867a49a990e1b3658ce4049433"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -29,7 +30,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### Est\u00e1ndar C++11\n",
+      "### Est\u00e1ndar C++11 (Progrmaci\u00f3n multiparadigma)\n",
       "\n",
       "#### Auto type (Definici\u00f3n din\u00e1mica de tipo de dato, en tiempo de compilaci\u00f3n)\n"
      ]
@@ -64,6 +65,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 26,
        "text": [
@@ -125,6 +127,7 @@
      "metadata": {},
      "outputs": [
       {
+       "metadata": {},
        "output_type": "pyout",
        "prompt_number": 25,
        "text": [
@@ -162,6 +165,79 @@
       "  * Cantidad de cada uno de los nucleotidos (A,C,T,G)\n",
       "  * Longitud de la secuencia sin tener en cuenta los nucle\u00f3tidos no definidos (N)\n",
       "* Buscar la cadena \"TGAGCTCTGC\" y mostrar la linea del archivo en la cual se encontr\u00f3\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "---\n",
+      "### Prolog (Programaci\u00f3n L\u00f3gica)\n",
+      "\n",
+      "Completar la siguiente base de conocimiento con *t\u00e9rminos* que usted desee, y a partir de ella generar las consultas necesarias para responder las preguntas al final:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%prolog \n",
+      "\n",
+      "humano(_).\n",
+      "humano(_).\n",
+      "humano(_).\n",
+      "humano(_).\n",
+      "humano(_).\n",
+      "humano(_).\n",
+      "\n",
+      "masculino(_).\n",
+      "masculino(_).\n",
+      "masculino(_).\n",
+      "femenino(_).\n",
+      "femenino(_).\n",
+      "femenino(_).\n",
+      "\n",
+      "esPadre(_, _).\n",
+      "esPadre(_, _).\n",
+      "esPadre(_, _).\n",
+      "\n",
+      "padre(_,_) :- esPadre(_,_),masculino(_).\n",
+      "madre(_,_) :- esPadre(_,_),femenino(_).\n",
+      "\n",
+      "%esta regla tiene inconvenientes, que pasa si se quiere consultar los bisabuelos\n",
+      "abuelo(_, _) :- padre(_, _), padre(_, _).\n",
+      "\n",
+      "% se soluciona con reglas recursivas\n",
+      "ancestro(_, _) :- padre(_, _).  %esta es la condicion de parada\n",
+      "ancestro(_, _) :- padre(_, _), ancestro(_, _)."
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**Consultas:**\n",
+      "\n",
+      "* Listar s\u00f3lo los padres de la Base de conocimiento\n",
+      "* Listar los padres y respectivos hijos de la Base de conocimiento\n",
+      "* Imprimir qui\u00e9n esPadre de qui\u00e9n sin importar si es padre o madre\n",
+      "* Listar las madres y respectivos hijos de la Base de conocimiento\n",
+      "* Realizar la misma consulta usando la regla \"abuelo\" y \"ancestro\" y compararlas\n",
+      "* Realizar una consulta para bisabuelo usando la regla recursiva\n",
+      "* Imprima todos los ancestros de un termino dado (por ejemplo de Daniel)\n",
+      "* Imprima todas las personas para quien un termino dado (por ejemplo Juan) sea un ancestro\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "---\n",
+      "\n",
+      "### Scheme (Programaci\u00f3n Funcional)\n"
      ]
     },
     {
